# LogToGraph

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  VERSION  main.cpp  submodules.init.txt
.github/workflows/: Linux.yml  Osx.yml  Win32.yml  Win64.yml  cmake.yml
LogGenApp/: main.cpp
apis/: CurlWrapper.h  ILayoutPane.h  LtgPluginApi.h
cmake/: 3rdparty.cmake  ctools.cmake  freetype.cmake  glad.cmake  glfw.cmake  imgui.cmake  imguicolortextedit.cmake  implot.cmake  lua.cmake  luajit.cmake  sqlite.cmake
cmake/Maintained/: ezlibs.cmake  iagp.cmake  imguipack.cmake  maintained.cmake
cmake/NotMaintained/: alphanum.cmake  curl.cmake  fmt.cmake  glad.cmake  glfw.cmake  glm.cmake  httplib.cmake  json.cmake  luajit.cmake  notmaintained.cmake  sqlite3.cmake
doc/: log_parsing.lua  main.lua  samples.ltg
doc/gui/: CustomImGuiFileDialogConfig.h  MainFrame.cpp  MainFrame.h
plugins/: CMakeLists.txt
plugins/LuaScripting/: CMakeLists.txt  README.md
plugins/LuaScripting/cmake/: luajit.cmake  sol2.cmake
plugins/LuaScripting/src/: LuaScripting.cpp  LuaScripting.h  YahooBroker.cpp  YahooBroker.h
plugins/LuaScripting/src/Headers/: LuaScriptingBuild.h  YahooBrokerBuild.h
plugins/LuaScripting/src/Modules/: Controller.cpp  Controller.h  LuaDatasModel.cpp  LuaDatasModel.h  LuaEngine.h  Module.cpp  Module.h  YahooApi.hpp
plugins/LuaScripting/src/Panes/: DataPane.cpp  DataPane.h
plugins/LuaScripting/src/Settings/: Settings.cpp  Settings.h
plugins/LuaScripting/src/headers/: LuaScriptingBuild.h
plugins/LuaScripting/src/mmodules/: LuaDatasModel.h
plugins/LuaScripting/src/modules/: LuaDatasModel.cpp  Module.h
plugins/LuaScripting/src/settings/: Settings.cpp
plugins/PythonScripting/: CMakeLists.txt  README.md
plugins/PythonScripting/cmake/: python.cmake
plugins/PythonScripting/src/: PythonScripting.cpp  PythonScripting.h
plugins/PythonScripting/src/Headers/: PythonScriptingBuild.h
plugins/PythonScripting/src/Modules/: Controller.h  Module.cpp  Module.h
plugins/PythonScripting/src/Settings/: Settings.cpp  Settings.h
src/: App.cpp  App.h
src/Contrib/FontIcons/: CMakeLists.txt  Cousine_Regular.cpp  Cousine_Regular.h  CustomFont.cpp  CustomFont.h  CustomFont2.cpp  CustomFont2.h  CustomFontToolBar.cpp  CustomFontToolBar.h  CustomFonts.ifs
src/Contrib/ImWidgets/: ImWidgets.cpp  ImWidgets.h
src/Engine/DB/: DBEngine.cpp  DBEngine.h
src/Engine/Graphs/: GraphAnnotation.cpp  GraphAnnotation.h  GraphAnnotationModel.cpp  GraphAnnotationModel.h  GraphGroup.cpp  GraphGroup.h  GraphView.cpp  GraphView.h
src/Engine/Log/: LogEngine.cpp  LogEngine.h  SignalSerie.cpp  SignalSerie.h  SignalTag.cpp  SignalTag.h  SignalTick.cpp  SignalTick.h  SourceFile.cpp  SourceFile.h
src/Engine/Lua/: LuaEngine.cpp  LuaEngine.h
src/Gui/: CustomImGuiFileDialogConfig.h  MainFrame.cpp  MainFrame.h
src/Headers/: CustomImGuiConfig.h  CustomImGuiFileDialogConfig.h  CustomImGuiThemeHelperConfigHeader.h  CustomInAppGpuProfiler.h  CustomLtgBackendConfig.h  Globals.h  IconsMaterialDesign.h  LogTimeBuild.h  LogToGraphBuild.h
src/Helper/: FrameActionSystem.cpp  FrameActionSystem.h  Messaging.cpp  Messaging.h  ThemeHelper.cpp  ThemeHelper.h
src/Panes/: AnnotationPane.cpp  AnnotationPane.h  CodePane.cpp  CodePane.h  ConsolePane.cpp  ConsolePane.h  GraphGroupPane.cpp  GraphGroupPane.h  GraphListPane.cpp  GraphListPane.h  GraphPane.cpp  GraphPane.h  LogPane.cpp  LogPane.h  LogPaneSecondView.cpp  LogPaneSecondView.h  ProfilerPane.cpp  ProfilerPane.h  SignalsHoveredDiff.cpp  SignalsHoveredDiff.h  SignalsHoveredList.cpp  SignalsHoveredList.h  SignalsHoveredMap.cpp  SignalsHoveredMap.h  SignalsPreview.cpp  SignalsPreview.h  ToolPane.cpp  ToolPane.h
src/Panes/Abstract/: AbstractPane.h
src/Panes/Manager/: LayoutManager.cpp  LayoutManager.h
src/Project/: ProjectFile.cpp  ProjectFile.h
src/backend/: MainBackend.cpp  MainBackend.h
src/frontend/: ImGuiThemes.cpp  MainFrontend.cpp  MainFrontend.h
src/frontend/Components/: CodeEditor.cpp  CodeEditor.h
src/headers/: CustomImGuiConfig.h  CustomImGuiFileDialogConfig.h  CustomImGuiThemeHelperConfigHeader.h  DatasDef.h  IconsMaterialDesign.h  LogToGraphBuild.h
src/models/database/: DBEngine.cpp  DataBase.cpp  DataBase.h
src/models/graphs/: GraphAnnotation.cpp  GraphAnnotation.h  GraphAnnotationModel.cpp  GraphAnnotationModel.h  GraphGroup.cpp  GraphGroup.h  GraphView.cpp  GraphView.h
src/models/log/: LogEngine.cpp  LogEngine.h  SignalSerie.cpp  SignalSerie.h  SignalTag.cpp  SignalTag.h  SignalTick.cpp  SignalTick.h  SignalTree.cpp  SignalTree.h  SourceFile.cpp  SourceFile.h
src/models/lua/: LuaEngine.cpp  LuaEngine.h
src/models/script/: ScriptingEngine.cpp  ScriptingEngine.h
src/paanes/: ConsolePane.h  GraphGroupPane.cpp  GraphListPane.h  GraphPane.cpp  LogPaneSecondView.cpp  ProfilerPane.h  SignalsHoveredDiff.cpp  SignalsHoveredMap.h  ToolPane.h
src/panes/: AnnotationPane.cpp  AnnotationPane.h  GraphGroupPane.cpp  GraphListPane.cpp  GraphListPane.h  GraphPane.cpp  LogPane.cpp  LogPane.h  LogPaneSecondView.cpp  LogPaneSecondView.h  SignalsHoveredDiff.cpp  SignalsHoveredDiff.h  SignalsHoveredList.cpp  SignalsHoveredList.h  SignalsHoveredMap.cpp  SignalsHoveredMap.h  SignalsPreview.cpp  SignalsPreview.h  ToolPane.cpp  ToolPane.h
src/project/: ProjectFile.cpp  ProjectFile.h
src/prroject/: ProjectFile.h
src/res/: Roboto_Medium.cpp  fontIcons.cpp  fontIcons.h
src/res/fonts/: FONT.ifs
src/systems/: FrameActionSystem.cpp  FrameActionSystem.h  Messaging.cpp  PluginManager.cpp  PluginManager.h  SettingsDialog.cpp  SettingsDialog.h  TranslationHelper.cpp  TranslationHelper.h
tools/: config.xml  imgui.ini
